--- a/GoShopping/GoShopping.csproj
+++ b/GoShopping/GoShopping.csproj
@@ -78,6 +78,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201911171646375_CreateDishAndIngredient.cs" />
+    <Compile Include="Migrations\201911171646375_CreateDishAndIngredient.designer.cs">
+      <DependentUpon>201911171646375_CreateDishAndIngredient.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -91,6 +96,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Migrations\201911171646375_CreateDishAndIngredient.resx">
+      <DependentUpon>201911171646375_CreateDishAndIngredient.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
