--- a/GoShopping/GoShopping.csproj
+++ b/GoShopping/GoShopping.csproj
@@ -90,6 +90,10 @@
     <Compile Include="Migrations\201911171907107_CreateUnit.designer.cs">
       <DependentUpon>201911171907107_CreateUnit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911172014074_AddColumnDishToIngredient.cs" />
+    <Compile Include="Migrations\201911172014074_AddColumnDishToIngredient.designer.cs">
+      <DependentUpon>201911172014074_AddColumnDishToIngredient.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -109,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911171907107_CreateUnit.resx">
       <DependentUpon>201911171907107_CreateUnit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911172014074_AddColumnDishToIngredient.resx">
+      <DependentUpon>201911172014074_AddColumnDishToIngredient.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
