--- a/GoShopping/GoShopping.csproj
+++ b/GoShopping/GoShopping.csproj
@@ -64,8 +64,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ShoppingListPage.xaml.cs">
-      <DependentUpon>ShoppingListPage.xaml</DependentUpon>
+    <Compile Include="ViewModels\DishesListViewModel.cs" />
+    <Compile Include="ViewModels\ShoppingListViewModel.cs" />
+    <Compile Include="Views\DishesListView.xaml.cs">
+      <DependentUpon>DishesListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ShoppingListView.xaml.cs">
+      <DependentUpon>ShoppingListView.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -75,15 +80,19 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Db\Dish.cs" />
-    <Compile Include="Db\GoShoppingDbContext.cs" />
-    <Compile Include="Db\Ingredient.cs" />
-    <Compile Include="Db\Unit.cs" />
+    <Compile Include="Models\Dish.cs" />
+    <Compile Include="Models\GoShoppingDbContext.cs" />
+    <Compile Include="Models\Ingredient.cs" />
+    <Compile Include="Models\Unit.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="ShoppingListPage.xaml">
+    <Page Include="Views\DishesListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ShoppingListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -144,6 +153,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
