--- a/GoShopping/GoShopping.csproj
+++ b/GoShopping/GoShopping.csproj
@@ -66,9 +66,13 @@
     </ApplicationDefinition>
     <Compile Include="Models\IngredientToBuy.cs" />
     <Compile Include="ViewModels\DishesListViewModel.cs" />
+    <Compile Include="ViewModels\NewDishViewModel.cs" />
     <Compile Include="ViewModels\ShoppingListViewModel.cs" />
     <Compile Include="Views\DishesListView.xaml.cs">
       <DependentUpon>DishesListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NewDishView.xaml.cs">
+      <DependentUpon>NewDishView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShoppingListView.xaml.cs">
       <DependentUpon>ShoppingListView.xaml</DependentUpon>
@@ -90,6 +94,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\DishesListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\NewDishView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
